--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: install vc-pckg
+      run: cargo install cargo-vcpkg
+    - name: Build vcpckg
+      run: cargo vcpkg build
     - name: Build
       run: cargo build --verbose
     - name: Run tests
